--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,12 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "name name"
   uri         : "http://name.com"
-  email       : "name@name.com"
+  email       : "chunyuan.wu@outlook.com"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+
 
 Name2 Name2:
   name        : "Name2 Name2"
