--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "name name"
-  uri         : "http://name.com"
+  name        : "Chunyuan WU"
+  uri         : "http://ranflanflan.github.io"
   email       : "chunyuan.wu@outlook.com"
-  bio         : "This is the first name."
+  bio         : "This is the first name......"
   avatar      : "bio-photo-2.jpg"
 
 
